--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
-    <link rel="icon" type="image/x-icon" href="/public/svg 2.svg">
+    <link rel="icon" type="image/x-icon" href="/svg 2.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>REIS</title>
   </head>
